--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ torchvision
 torchaudio
 flask
 ultralytics
-customtkinter
+# customtkinter
 openpyxl
+easyocr
 # paddlepaddle -i https://pypi.tuna.tsinghua.edu.cn/simple
 # paddleocr>=2.0.1
